# numx

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  idf_component.yml  library.json  library.properties
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml
archive/: README.md
benchmarks/: bench_ntt.c  bench_runner.c
cmake/: numxConfig.cmake.in
docs/algorithms/: autodiff.md  compressed_sensing.md  differentiate.md  fft.md  integrate.md  interpolate.md  linalg.md  ntt.md  ode.md  poly.md  roots.md  signal.md  sketch.md  stats.md
examples/: 01_linalg.c  02_fft.c  03_ode.c  04_autodiff.c  05_compressed_sensing.c  06_ntt.c  CMakeLists.txt
examples/esp32_ntt_test/: CMakeLists.txt
examples/esp32_ntt_test/main/: CMakeLists.txt  main.c  sdkconfig.defaults
include/numx/: autodiff.h  compressed_sensing.h  differentiate.h  fft.h  integrate.h  interpolate.h  linalg.h  ntt.h  numx.h  numx_config.h  numx_types.h  ode.h  poly.h  roots.h  signal.h  sketch.h  stats.h
src/: autodiff.c  compressed_sensing.c  differentiate.c  fft.c  integrate.c  interpolate.c  linalg.c  ntt.c  numx.c  ode.c  poly.c  roots.c  signal.c  sketch.c  stats.c
tests/: bench_win.c  test_autodiff.c  test_compressed_sensing.c  test_differentiate.c  test_fft.c  test_integrate.c  test_interpolate.c  test_linalg.c  test_ntt.c  test_ode.c  test_poly.c  test_roots.c  test_runner.c  test_signal.c  test_sketch.c  test_stats.c
tests/esp32_performance_tests/: CMakeLists.txt  bench_common.h  bench_phase1.c  bench_phase2.c  bench_runner.c  math_helpers.c  math_helpers.h
tests/esp32_performance_tests/include/: esp32_performance_tests.h
tests/esp32_tests/: CMakeLists.txt  bench.c  esp32_tests.c  math_helpers.c  math_helpers.h  test_autodiff.c  test_compressed_sensing.c  test_differentiate.c  test_fft.c  test_helpers.c  test_helpers.h  test_integrate.c  test_interpolate.c  test_linalg.c  test_ode.c  test_poly.c  test_roots.c  test_signal.c  test_sketch.c  test_stats.c  tests.h
tests/esp32_tests/include/: esp32_tests.h
tests/unity/: unity.c  unity.h  unity_internals.h
tests/x64/: CMakeLists.txt  test_autodiff.c  test_compressed_sensing.c  test_differentiate.c  test_fft.c  test_integrate.c  test_interpolate.c  test_linalg.c  test_ode.c  test_poly.c  test_roots.c  test_runner.c  test_signal.c  test_sketch.c  test_stats.c
tests/x86/: CMakeLists.txt  test_autodiff.c  test_compressed_sensing.c  test_differentiate.c  test_fft.c  test_integrate.c  test_interpolate.c  test_linalg.c  test_ode.c  test_poly.c  test_roots.c  test_runner.c  test_signal.c  test_sketch.c  test_stats.c
validation/: README.md
validation/c/: val_bench_phase2.c  val_runner.c
validation/hardware/: esp32_devkit_v1.md  host_linux_x86_64.md  mac_m1_pro.md  mac_mini_m4_pro.md  raspberry_pi.md  windows_msvc.md
validation/python/: reference_linalg.py  reference_phase1.py
validation/results/autodiff/: autodiff.md
validation/results/compressed_sensing/: compressed_sensing.md
validation/results/differentiate/: differentiate.md
validation/results/fft/: fft.md
validation/results/integrate/: integrate.md
validation/results/interpolate/: interpolate.md
validation/results/linalg/: lu_solve.md  mat_det.md  mat_mul.md  mat_transpose.md  vec_cross3.md  vec_dot.md  vec_norm.md
validation/results/ntt/: ntt.md
validation/results/ode/: ode.md
validation/results/poly/: poly.md
validation/results/roots/: roots.md
validation/results/signal/: signal.md
validation/results/sketch/: sketch.md
validation/results/stats/: stats.md
